--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Super ToDo API"
 readme = "README.md"
 requires-python = ">=3.11,<4.0"
-dependencies = ["fastapi[standard]>=0.116.1"]
+dependencies = ["fastapi[standard]>=0.116.1", "uuid7>=0.1.0"]
 
 [dependency-groups]
 dev = ["pytest>=8.4.2", "pytest-cov>=6.2.1", "ruff>=0.12.12", "taskipy>=1.14.1"]
