--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi[standard]>=0.116.1",
+    "psycopg2-binary>=2.9.10",
     "pytest-asyncio>=1.1.0",
+    "sqlalchemy>=2.0.43",
     "uuid7>=0.1.0",
 ]
 
