--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi[standard]>=0.116.1",
     "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.10.1",
     "pytest-asyncio>=1.1.0",
+    "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
     "uuid7>=0.1.0",
 ]
