--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 APP_NAME=SuperTodo
 DEBUG=True
-DATABASE_URL=sqlite+aiosqlite:///./app.db
+DATABASE_URL=postgresql+asyncpg://root:root@localhost:5432/supertodo
