--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = "Super ToDo API"
 readme = "README.md"
 requires-python = ">=3.11,<4.0"
 dependencies = [
+    "aiobcrypt>=3.2.0.post1",
+    "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
-    "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
     "pytest-asyncio>=1.1.0",
     "python-dotenv>=1.1.1",
-    "sqlalchemy>=2.0.43",
+    "sqlalchemy[asyncio]>=2.0.43",
     "uuid7>=0.1.0",
 ]
 
@@ -49,7 +50,7 @@ omit = [
 
 
 [tool.taskipy.tasks]
-start-dev = "fastapi dev main.py"
+start-dev = "fastapi dev src/main.py"
 lint = "ruff check"
 pre_format = "ruff check --fix"
 format = "ruff format"
