--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 APP_NAME=SuperTodo
 DEBUG=True
 DATABASE_URL=postgresql+asyncpg://root:root@localhost:5432/supertodo
+ACCESS_TOKEN_TYPE=Bearer
+ACCESS_TOKEN_ALGORITHM=HS256
+ACCESS_TOKEN_SECRET_KEY=secret-key
