--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "pytest-asyncio>=1.1.0",
     "python-dotenv>=1.1.1",
     "sqlalchemy[asyncio]>=2.0.43",
