--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ select = [
 ]
 fixable = ["ALL"] # Allows Ruff to remove unused imports automatically.
 
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["PLR2004"]
+
 [tool.ruff.format]
 quote-style = "single"
 docstring-code-format = true
@@ -53,7 +56,6 @@ omit = [
     "tests/*",
     "__init__.py",
 ] # Exclude test files from coverage
-
 
 [tool.taskipy.tasks]
 start-dev = "fastapi dev src/main.py"
