chore: setup pytest to use asyncio mode auto as default on scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,5 +63,5 @@ lint = "ruff check"
 pre_format = "ruff check --fix"
 format = "ruff format"
 pre_test = "task lint && task format"
-test = "pytest -s -x --cov=. -vv"
-coverage = "pytest --cov=. --cov-report=html -vv"
+test = "pytest --asyncio-mode=auto -s -x --cov=. -vv"
+coverage = "pytest --asyncio-mode=auto --cov=. --cov-report=html -vv"
