--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,13 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["pytest>=8.4.2", "pytest-cov>=6.2.1", "ruff>=0.12.12", "taskipy>=1.14.1"]
+dev = [
+    "freezegun>=1.5.5",
+    "pytest>=8.4.2",
+ "pytest-cov>=6.2.1",
+ "ruff>=0.12.12",
+ "taskipy>=1.14.1",
+]
 
 [tool.ruff]
 line-length = 79
