--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,12 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
     "freezegun>=1.5.5",
     "pytest>=8.4.2",
- "pytest-cov>=6.2.1",
- "ruff>=0.12.12",
- "taskipy>=1.14.1",
+    "pytest-cov>=6.2.1",
+    "ruff>=0.12.12",
+    "taskipy>=1.14.1",
 ]
 
 [tool.ruff]
