--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DATABASE_URL=postgresql+asyncpg://root:root@localhost:5432/supertodo
 ACCESS_TOKEN_TYPE=Bearer
 ACCESS_TOKEN_ALGORITHM=HS256
 ACCESS_TOKEN_SECRET_KEY=secret-key
+ACCESS_TOKEN_EXPIRE_MINUTES=30
