chore: update max arguments rule from 5 to 6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ fixable = ["ALL"] # Allows Ruff to remove unused imports automatically.
 quote-style = "single"
 docstring-code-format = true
 
+[tool.ruff.lint.pylint]
+max-args = 6
+
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = "-p no:warnings"
