--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ select = [
 fixable = ["ALL"] # Allows Ruff to remove unused imports automatically.
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**/*.py" = ["PLR2004"]
+"tests/**/*.py" = ["PLR2004", "PLR0913"]
 
 [tool.ruff.format]
 quote-style = "single"
